# alkana-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  dictionary.csv
examples/: hello_world.rs
src/: dictionary.rs  lib.rs
