[package]
name = "alkana-rs"
version = "0.1.0"
edition = "2021"
description = "convert alphabet to katakana"
license = "MIT"
readme = "README.md" 
repository = "https://github.com/uesugi6111/alkana-rs"
keywords = ["japanese", "kana", "hiragana", "katakana", "alphabet"]
categories = ["internationalization", "localization"]
authors = ["uesugi"]
[dependencies]

once_cell = "1.13.0"